--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">KlingKlang</string>
     <string name="go_to_menu">Go to Menu</string>
+    <string name="channel_name">Facade proximity</string>
+    <string name="channel_description">Notifications for when the device is near the currently relevant facade.</string>
 </resources>
