--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="go_to_menu">Go to Menu</string>
     <string name="channel_name">Facade proximity</string>
     <string name="channel_description">Notifications for when the device is near the currently relevant facade.</string>
+    <string name="location_region_name">location_region_name</string>
+    <string name="location_region_address">location_region_address</string>
 </resources>
